--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -25,6 +25,8 @@
  ENG_fascism_DEF: "帝政イギリス"
  ENG_democratic: "イギリス"
  ENG_democratic_DEF: "イギリス"
+ ENG_conservatism: "イギリス"
+ ENG_conservatism_DEF: "イギリス"
  ENG_neutrality: "イギリス"
  ENG_neutrality_DEF: "イギリス"
  ENG_communism: "イギリス連合"
@@ -4447,9 +4449,6 @@
  ELS_socialism: "El Salvador"
  ELS_socialism_ADJ: "Salvadoran"
  ELS_socialism_DEF: "Socialist Republic of El Salvador"
- ENG_socialism: "Britain"
- ENG_socialism_ADJ: "British"
- ENG_socialism_DEF: "Socialist Republic of Britain"
  EQG_socialism: "Equatorial Guinea"
  EQG_socialism_ADJ: "Equatorial Guinean"
  EQG_socialism_DEF: "Socialist Republic of Equatorial Guinea"
@@ -5103,9 +5102,6 @@
  ELS_socialdemocratic: "El Salvador"
  ELS_socialdemocratic_ADJ: "Salvadoran"
  ELS_socialdemocratic_DEF: "Republic of El Salvador"
- ENG_socialdemocratic: "Britain"
- ENG_socialdemocratic_ADJ: "British"
- ENG_socialdemocratic_DEF: "Republic of Britain"
  EQG_socialdemocratic: "Equatorial Guinea"
  EQG_socialdemocratic_ADJ: "Equatorial Guinean"
  EQG_socialdemocratic_DEF: "Republic of Equatorial Guinea"
@@ -5759,9 +5755,6 @@
  ELS_conservatism: "El Salvador"
  ELS_conservatism_ADJ: "Salvadoran"
  ELS_conservatism_DEF: "Republic of El Salvador"
- ENG_conservatism: "Britain"
- ENG_conservatism_ADJ: "British"
- ENG_conservatism_DEF: "Republic of Britain"
  EQG_conservatism: "Equatorial Guinea"
  EQG_conservatism_ADJ: "Equatorial Guinean"
  EQG_conservatism_DEF: "Republic of Equatorial Guinea"
