--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -92,13 +92,6 @@
  POL_POS_party_long: "社会普遍機構" #Common Organization of Society
  POL_exile_democratic_party: "PLD"
  POL_exile_democratic_party_long: "自由民主党"
- ENG_communism_party: "グレートブリテン共産党"
- ENG_democratic_party: "保守党"
- ENG_fascism_party: "イギリス・ファシスト連盟"
- ENG_neutrality_party_kings_party: "王党"
- ENG_neutrality_party_kings_party_long: "王党"
- ENG_neutrality_party_queens_party: "女王党"
- ENG_neutrality_party_queens_party_long: "女王党"
  ITA_communism_party: "イタリア共産党"
  ITA_communism_party_long: "イタリア共産党"
  ITA_democratic_party: "イタリア人民党"
@@ -1106,3 +1099,14 @@
  RUS_neutrality_party_long: "ロシア君主主義同盟"
  RUS_fascism_party: "RFP"
  RUS_fascism_party_long: "ロシアファシスト党"
+
+ ENG_communism_party: "グレートブリテン共産党"
+ ENG_socialism_party: "フレートブリテン社会党"
+ ENG_socialdemocratic_party: "労働党"
+ ENG_democratic_party: "自由党"
+ ENG_conservatism_party: "保守党"
+ ENG_fascism_party: "イギリス・ファシスト連盟"
+ ENG_neutrality_party_kings_party: "王党"
+ ENG_neutrality_party_kings_party_long: "王党"
+ ENG_neutrality_party_queens_party: "女王党"
+ ENG_neutrality_party_queens_party_long: "女王党"
