ボケファイル消去

--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -33,4 +33,4 @@
  TR_Russia_news.3.a: "グレートゲームは終わりか？"
  TR_Russia_news.3.b: "我々は陰で泣いている。"
  TR_Russia_news.3.c: "奴らは見失ってしまったのだ！"
- TR_Russia_news.3.d: "注視すべきだ。"
+ TR_Russia_news.3.e: "注視すべきだ。"
