--- a/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
@@ -57,3 +57,4 @@
  GER_hungary_revolution:0 "ハンガリー革命を再び"
  GER_south_tyrol:0 "南チロル再請求"
  GER_state_function:0 "国家事業の拡大"
+ GER_more_industry:0 "更なる工業化"
