--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -1,7 +1,7 @@
 ﻿l_japanese:
- RUS_newtsar_1:"新時代の皇帝"
- RUS_newtsar_1_desc:"§R皇帝が死亡するまで進めることはできない！§!\n運命の悪戯によって皇帝に即位することになったキリルは、強い改革思想を持っている。宮廷や政治家たちの反動的体制を打破することにより、民衆との関りを活発にし、大幅な親政を行う。"
- RUS_unprison_1: "政治犯の釈放"
- RUS_unprison_1_desc:"長い反動時代に不当に拘束された複数の改革は政治犯たちは、新皇帝の即位に伴って釈放を求めた。改革のために必要な人材として解放された彼らは、かつての人脈を利用しより改革の波を国内に起こすだろう。"
- RUS_remake_national_government_1:"帝国政府の再編"
- RUS_remake_national_government_1_desc: "帝国政府の再編によって、改革派をより多く政府に組み込む。これにより、反動的な意見は黙殺され、より加速的な、生産的近代化を実行することが可能になるだろう。"
+ RUS_newtsar:"新時代の皇帝"
+ RUS_newtsar_desc:"§R皇帝が死亡するまで進めることはできない！§!\n運命の悪戯によって皇帝に即位することになったキリルは、強い改革思想を持っている。宮廷や政治家たちの反動的体制を打破することにより、民衆との関りを活発にし、大幅な親政を行う。"
+ RUS_unprison: "政治犯の釈放"
+ RUS_unprison_desc:"長い反動時代に不当に拘束された複数の改革は政治犯たちは、新皇帝の即位に伴って釈放を求めた。改革のために必要な人材として解放された彼らは、かつての人脈を利用しより改革の波を国内に起こすだろう。"
+ RUS_remake_national_government:"帝国政府の再編"
+ RUS_remake_national_government_desc: "帝国政府の再編によって、改革派をより多く政府に組み込む。これにより、反動的な意見は黙殺され、より加速的な、生産的近代化を実行することが可能になるだろう。"
