ロシアもろもろ

--- a/localisation/TR_decisions/japanese/RUS_census_d_l_japanese.yml
+++ b/localisation/TR_decisions/japanese/RUS_census_d_l_japanese.yml
@@ -1,5 +1,5 @@
 ﻿l_japanese:
- RUS_census_decision:"戸籍改革"]
+ RUS_census_decision:"戸籍改革"
  RUS_census_decision_desc:"我が国の中央アジアを中心とする地域の住民の把握によって、より効率的な徴兵業務が可能となるだろう。"
  RUS_census_d_1:"§Yカザフスタン§!における戸籍改革"
  RUS_census_d_2:"§Yキルギスタン§!における戸籍改革"
