--- a/localisation/TR_characters/japanese/TR_traits_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_traits_l_japanese.yml
@@ -9,3 +9,4 @@
  TR_confusion_of_notsar_desc: "長らく皇帝に依存していた帝国政府は、突然の空位により極めて不安定な状態に陥っている。"
  TR_krill_reformal_tsar: "改革のツァーリ"
  TR_krill_conflicts_in_the_court: "宮廷内紛争"
+ TR_krill_evolutional_government: "改革派閣僚"
