フランス領西アフリカのローカライズ修正

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -170,34 +170,36 @@
  FGE_ADJ: "フランス"
  FGE_subject: "$OVERLORDADJ$ $FRA$"
  FGE_subject_DEF: "$OVERLORDADJ$ $FRA$"
- FWA_fascism: "フランス領西アフリカ"
- FWA_fascism_DEF: "フランス領西アフリカ"
- FWA_democratic: "フランス領西アフリカ"
- FWA_democratic_DEF: "フランス領西アフリカ"
- FWA_neutrality: "フランス領西アフリカ"
- FWA_neutrality_DEF: "フランス領西アフリカ"
- FWA_communism: "フランス領西アフリカ"
- FWA_communism_DEF: "フランス領西アフリカ"
- FwA_fascism_ADJ: "フランス"
- FWA_neutrality_ADJ: "フランス"
- FwA_communism_ADJ: "フランス"
- FWA: "フランス"
- FWA_ADJ: "フランス"
- FWA_subject: "$OVERLORDADJ$ $FRA$"
- FWA_subject_DEF: "$OVERLORDADJ$ $FRA$"
- FEA_fascism: "フランス領赤道アフリカ"
- FEA_fascism_DEF: "フランス領赤道アフリカ"
- FEA_democratic: "フランス領赤道アフリカ"
- FEA_democratic_DEF: "フランス領赤道アフリカ"
- FEA_neutrality: "フランス領赤道アフリカ"
- FEA_neutrality_DEF: "フランス領赤道アフリカ"
- FEA_communism: "フランス領赤道アフリカ"
- FEA_communism_DEF: "フランス領赤道アフリカ"
- FEA_fascism_ADJ: "フランス"
- FEA_neutrality_ADJ: "フランス"
- FEA_communism_ADJ: "フランス"
- FEA: "フランス"
- FEA_ADJ: "フランス"
+ FWA_fascism: "西アフリカ帝国"
+ FWA_fascism_DEF: "西アフリカ帝国"
+ FWA_democratic: "西アフリカ共和国"
+ FWA_democratic_DEF: "西アフリカ共和国"
+ FWA_neutrality: "西アフリカ王国"
+ FWA_neutrality_DEF: "西アフリカ王国"
+ FWA_communism: "西アフリカ連邦"
+ FWA_communism_DEF: "西アフリカ連邦"
+ FWA_fascism_ADJ: "西アフリカ連邦"
+ FWA_neutrality_ADJ: "西アフリカ"
+ FWA_communism_ADJ: "西アフリカ"
+ FWA: "西アフリカ"
+ FWA_ADJ: "西アフリカ"
+ FWA_subject: "$OVERLORDADJ$領$FWA$"
+ FWA_subject_DEF: "$OVERLORDADJ$領$FWA$"
+ FEA_fascism: "赤道アフリカ帝国"
+ FEA_fascism_DEF: "赤道アフリカ帝国"
+ FEA_democratic: "赤道アフリカ共和国"
+ FEA_democratic_DEF: "赤道アフリカ共和国"
+ FEA_neutrality: "赤道アフリカ王国"
+ FEA_neutrality_DEF: "赤道アフリカ王国"
+ FEA_communism: "赤道アフリカ連邦"
+ FEA_communism_DEF: "赤道アフリカ連邦"
+ FEA_fascism_ADJ: "赤道アフリカ連邦"
+ FEA_neutrality_ADJ: "赤道アフリカ"
+ FEA_communism_ADJ: "赤道アフリカ"
+ FEA: "赤道アフリカ"
+ FEA_ADJ: "赤道アフリカ"
+ FEA_subject: "$OVERLORDADJ$領$FEA$"
+ FEA_subject_DEF: "$OVERLORDADJ$領$FEA$"
  LUX_fascism: "ルクセンブルク"
  LUX_fascism_DEF: "ルクセンブルク"
  LUX_democratic: "ルクセンブルク"
