fix japan and korea

--- a/localisation/TR_focus/japanese/TR_SRI_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_SRI_focus_l_japanese.yml
@@ -1,4 +1,4 @@
-l_japanese:
+﻿l_japanese:
  SRI_emergency_council: "緊急評議会の設立"
  SRI_emergency_council_desc: "国家の緊急事態には早急な対応を必要とする。そこで我々は新たな国家元首が決定されるまでの間党幹部による合議制によって国を運営してゆくことを決めた。"
  SRI_just_socialim: "正統派社会主義"
