--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -918,8 +918,8 @@
  IRQ_subject_DEF: "$OVERLORDADJ$ $IRQ$"
  JAP_fascism: "大日本帝国"
  JAP_fascism_DEF: "大日本帝国"
- JAP_democratic: "日本国"
- JAP_democratic_DEF: "日本国"
+ JAP_democratic: "大日本帝国"
+ JAP_democratic_DEF: "大日本帝国"
  JAP_neutrality: "大日本帝国"
  JAP_neutrality_DEF: "大日本帝国"
  JAP_communism: "日本人民共和国"
@@ -931,8 +931,8 @@
  JAP: "日本"
  JAP_DEF: "日本"
  JAP_ADJ: "日本"
- JAP_subject: "$OVERLORDADJ$ $JAP$"
- JAP_subject_DEF: "$OVERLORDADJ$ $JAP$"
+ JAP_subject: "$OVERLORDADJ$領$JAP$"
+ JAP_subject_DEF: "$OVERLORDADJ$領$JAP$"
  MEX_fascism: "軍政メキシコ"
  MEX_fascism_DEF: "軍政メキシコ"
  MEX_democratic: "メキシコ合衆国"
@@ -1470,8 +1470,8 @@
  KOR_fascism_DEF: "独立朝鮮総督府"
  KOR_democratic: "大韓民国"
  KOR_democratic_DEF: "大韓民国"
- KOR_neutrality: "北朝鮮"
- KOR_neutrality_DEF: "北朝鮮"
+ KOR_neutrality: "大韓帝国"
+ KOR_neutrality_DEF: "大韓帝国"
  KOR_communism: "朝鮮民主主義人民共和国"
  KOR_communism_DEF: "朝鮮民主主義人民共和国"
  KOR_fascism_ADJ: "朝鮮"
