ローカライズ

--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -948,10 +948,39 @@
  STATE_946:0 "カディアック"
  STATE_947:0 "アトカ"
  STATE_948:0 "ミハイロフ"
- STATE_949:0 "北関東"
- STATE_950:0 "南九州"
- STATE_951:0 "山陰"
- STATE_952:0 "羽州"
+ STATE_949:0 "群馬"
+ STATE_950:0 "鹿児島"
+ STATE_951:0 "島根"
+ STATE_952:0 "山形"
  STATE_953:0 "福島"
  STATE_954:0 "青森"
  STATE_955:0 "新潟"
+ STATE_956:0 "岩手"
+ STATE_957:0 "秋田"
+ STATE_958:0 "茨城"
+ STATE_959:0 "栃木"
+ STATE_960:0 "千葉"
+ STATE_961:0 "埼玉"
+ STATE_962:0 "神奈川"
+ STATE_963:0 "静岡"
+ STATE_964:0 "山梨"
+ STATE_965:0 "岐阜"
+ STATE_966:0 "福井"
+ STATE_967:0 "富山"
+ STATE_968:0 "三重"
+ STATE_969:0 "滋賀"
+ STATE_970:0 "奈良"
+ STATE_971:0 "和歌山"
+ STATE_972:0 "兵庫"
+ STATE_973:0 "京都"
+ STATE_974:0 "岡山"
+ STATE_975:0 "山口"
+ STATE_976:0 "鳥取"
+ STATE_977:0 "高知"
+ STATE_978:0 "徳島"
+ STATE_979:0 "香川"
+ STATE_980:0 "大分"
+ STATE_981:0 "宮崎"
+ STATE_982:0 "熊本"
+ STATE_983:0 "佐賀"
+ STATE_984:0 "長崎"
