人口を調整

--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -280,7 +280,7 @@
  STATE_279:0 "サンティアゴ"
  STATE_280:0 "マットグロッソ"
  STATE_281:0 "モルディブ"
- STATE_282:0 "南関東"
+ STATE_282:0 "東京"
  STATE_283:0 "甘粛"
  STATE_284:0 "北島"
  STATE_285:0 "ニューサウスウェールズ"
@@ -526,14 +526,14 @@
  STATE_525:0 "南朝鮮"
  STATE_526:0 "沖縄"
  STATE_527:0 "北朝鮮"
- STATE_528:0 "北九州"
- STATE_529:0 "中国"
- STATE_530:0 "四国"
- STATE_531:0 "関西"
- STATE_532:0 "東海"
- STATE_533:0 "奥州"
- STATE_534:0 "北陸"
- STATE_535:0 "日本アルプス"
+ STATE_528:0 "福岡"
+ STATE_529:0 "広島"
+ STATE_530:0 "愛媛"
+ STATE_531:0 "大阪"
+ STATE_532:0 "愛知"
+ STATE_533:0 "宮城"
+ STATE_534:0 "石川"
+ STATE_535:0 "長野"
  STATE_536:0 "北海道"
  STATE_537:0 "南樺太"
  STATE_538:0 "コキラービル"
