シベリア測量

--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -7,12 +7,13 @@
  TR_Russia.3.d: "次の皇帝となる予定のゲオルギーは、赤色テロルの恐ろしさと凶暴さから、自らの身を案じて即位をためらっている。実際問題、死につつある共産主義による最後の力を振り絞ったテロルによって宮廷関係者は大量に死亡しており、これらの事実は彼を思いとどまらせるのには十分すぎる。"
  TR_Russia.3.a: "彼に恐ろしい現実を見せるとしよう。"
  TR_Russia.3.b: "ツァーリが何を恐れようか！"
- TR_Russia.4.t: "シベリア測量"
- TR_Russia.4.d: "ロシアの広大な大地の中でもヨーロッパに近いシベリアの平野には、多くの資源が埋まっている可能性がある。陸軍を中心とした測量隊は、国の最精鋭の技術者たちを連れ、数か月にも及ぶシベリア測量に出発しようとしている。"
- TR_Russia.4.a: "吉報を待っている。"
- TR_Russia.5.t: "シベリアの資源"
- TR_Russia.5.d: "地質学者たちの研究によって予想されたシベリアの資源は、想像以上に大量に埋蔵していることが発覚した。この計画に投入された国家予算と比較しても、長期的な利益となる国内で足りていない資源について、多くの新たな発見があった。すでに政府は、極東に対する調査計画を進めている。"
- TR_Russia.5.a: "こんなにも沢山か！"
+
+ TR_Russia.4.t:"シベリア測量の終了"
+ TR_Russia.4.d:"シベリア地方には、専門家の指摘通り大量の有効活用できる資源が存在した。これらの土地に派遣された専門家たちは各々の専門分野におけるシベリアの価値について研究し、既にアカデミーへ送付されている。どちらにせよ、今回の測量で得た資源を利用して、我が国の近代化はさらに一歩先に進むだろう。"
+ TR_Russia.4.a:"素晴らしい。"
+
+
+
  TR_Russia.6.t: "テヘラン講和会議"
  TR_Russia.6.d: "首都テヘランを失ったイランは、我々に和平と休戦を申し出てきた。既にイラン北部は我々の工作により複数の反イラン勢力を活発化させている。我々箱の会議で何を要求すべきだろう？"
  TR_Russia.6.a: "イラン北部を「解放」しよう。"
