--- a/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
@@ -1,24 +1,13 @@
 ﻿l_japanese:
   TR_Russia.tt.1: "皇帝が死亡する。"
   TR_Russia.tt.2: "即位が拒否される。"
-  TR_Russia.tt.3: "まだ見ぬ§Yシベリア§!の資源を探し求める旅の準備を行う。"
-  TR_Russia.tt.4: "シベリアへ出発する。"
-  TR_Russia.tt.5: "§Rこの計画で国家に大きな負担がかかっている！§!"
-  TR_Russia.tt.6: "§R測量中は近代化を進めることはできない！§!"
-  TR_Russia.tt.7: "強力な§Y産業改革§!を行うことができるようになる！"
-  TR_Russia.tt.8: "強力な§Y軍事改革§!を行うことができるようになる！"
-  TR_Russia.tt.9: "§Yシベリア測量§!で得た大量の資源を利用して近代化を行う。"
-  TR_Russia.tt.10: "イランは§Y降伏進捗§!が§R80%§!を超えると講和を希望するだろう！"
-  TR_Russia.tt.11: "§Rこの国家方針を選択することで、イラン北部に請求権を得るが、イギリスの反発による軍隊の一時的な弱体化を発生させる！§!"
-  TR_Russia.tt.12: "§R産業改革に追い付かなかった組織を解体するが、同時に組織が行っていた次の戦争への備えも失う！§!"
-  TR_Russia.tt.13: "§3近代化§!によって国内産業の構造が改善しつつある！"
-  TR_Russia.tt.14: "§Yモスクワ§!に完全な状態でよく訓練された装甲師団§Y10§!師団からなる親衛装甲軍団が組織される！"
-  TR_Russia.tt.15: "§Yペトログラード§!に完全な状態でよく訓練された装甲師団§Y12§!師団からなる親衛装甲軍団が組織される！"
-  TR_Russia.tt.16: "§Yドニエプル川§!に沿って§Yレベル4§!の§Y陸上要塞§!を建設する。"
-  TR_Russia.tt.17: "§Y西ドヴィナ川§!に沿って§Yレベル4§!の§Y陸上要塞§!を建設する。\n平野部に§Yレベル5§!の§Y陸上要塞§!を建設する。"
-  TR_Russia.tt.18: "§3近代化§!によって帝国軍の後進性が改善しつつある！"
-  TR_Russia.tt.19: "§Yロシア軍§!は近代化によって恐ろしい軍隊に変化した！"
-  TR_Russia.tt.20: "§Yラジオ§!を使用することで様々な§Y布告§!を行えるようになる！"
+  TR_Russia.tt.3: "まだ見ぬ§Yシベリア§!の資源を探し求める旅へ向かう。"
+  TR_Russia_siberia_tt.1: "§Yウラン・ウデ§!で行った採掘実験で以下の成果を得た。"
+  TR_Russia_siberia_tt.2: "§Yボダイボ§!で行った採掘実験で以下の成果を得た。"
+  TR_Russia_siberia_tt.3: "§G陸軍§!が行った遠征演習で以下の成果を得た。"
+  TR_Russia_siberia_tt.4: "§G海軍§!が行った遠征演習で以下の成果を得た。"
+  TR_Russia_siberia_tt.5: "§G空軍§!が行った遠征演習で以下の成果を得た。"
+  TR_Russia_siberia_tt.6: "§G産業研究者§!が行った遠征演習で以下の成果を得た。"
 
   TR_nosupport: "§Rこの選択肢は現バージョンでは実装されていない！§!"
   TR_focus_nosupport: "§Rこの選択肢には現実味がない§!"
