--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -8,3 +8,6 @@
 
  RUS_remake_national_government:"帝国政府の再編"
  RUS_remake_national_government_desc: "帝国政府の再編によって、改革派をより多く政府に組み込む。これにより、反動的な意見は黙殺され、より加速的な、生産的近代化を実行することが可能になるだろう。"
+
+ RUS_development_of_siberia:"シベリア測量"
+ RUS_development_of_siberia_desc:"我が国の権威ある地質学者によると、シベリアの凍土には多くの資源や利用可能な土地が広がっており、我々はこれに対して積極的に測量などを行うべきであるらしい。近代化の途上でこれまで黙殺されてきた新たな提案を実行するときが来た。皇帝の名によって編成された技術者たちの集団をシベリア地方へ派遣し、かの地方の産業基盤について調査しようではないか。"
