--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -11,3 +11,6 @@
 
  RUS_development_of_siberia:"シベリア測量"
  RUS_development_of_siberia_desc:"我が国の権威ある地質学者によると、シベリアの凍土には多くの資源や利用可能な土地が広がっており、我々はこれに対して積極的に測量などを行うべきであるらしい。近代化の途上でこれまで黙殺されてきた新たな提案を実行するときが来た。皇帝の名によって編成された技術者たちの集団をシベリア地方へ派遣し、かの地方の産業基盤について調査しようではないか。"
+
+ RUS_MNE_Lyceum:"帝国学術院の拡充"
+ RUS_MNE_Lyceum_desc:"国立教育省によって運営される帝国の基礎教育局である帝国学術院を、シベリア測量で得た資源を利用して各地に組織的に建設する。"
