Revert "Merge commit '259402526899a84ec9932a072b1cbbd7e3e9f76d'"
This reverts commit 0ffba0a3df7b8d9fd2e260496e39131a1e10793e, reversing
changes made to ee777723132b63db30a2978a5025bd98d39107ec.

--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -5,7 +5,12 @@
  RUS_wwi_army_desc: "ロシア帝国軍は先の大戦争の遺産を大きく抱えている。近代化の途上で発生した戦争による勝利体験は、陸軍による無駄な突撃戦術を長く維持させることになってしまった。"
  RUS_nomad_of_russia: "遊牧民"
  RUS_nomad_of_russia_desc: "我が国は中央アジアを中心に多くの遊牧民を抱えており、彼らは定住せずに移動して生活する。彼らには住所や戸籍が十分に与えられないため、我々は十分な徴兵を行うことができない。"
-
+ RUS_nomad_of_russia_1: "遊牧民"
+ RUS_nomad_of_russia_1_desc: "我が国は中央アジアを中心に多くの遊牧民を抱えており、彼らは定住せずに移動して生活する。彼らには住所や戸籍が十分に与えられないため、我々は十分な徴兵を行うことができない。"
+ RUS_nomad_of_russia_2: "遊牧民"
+ RUS_nomad_of_russia_2_desc: "我が国は中央アジアを中心に多くの遊牧民を抱えており、彼らは定住せずに移動して生活する。彼らには住所や戸籍が十分に与えられないため、我々は十分な徴兵を行うことができない。"
+ RUS_nomad_of_russia_3: "遊牧民"
+ RUS_nomad_of_russia_3_desc: "我が国は中央アジアを中心に多くの遊牧民を抱えており、彼らは定住せずに移動して生活する。彼らには住所や戸籍が十分に与えられないため、我々は十分な徴兵を行うことができない。"
  RUS_agricultural_economy: "農業経済"
  RUS_agricultural_economy_desc: "我が国の長く続いた農奴制と実質的に今も続く農家の貧困、国家の産業の秩序は近代国家には適切ではなく、その結果、絶望的なまでに非効率な経済体系が未だロシアには存在している。近代化の途上でこのような問題は一般的に解決されるが、これまでロシア帝国政府は農家に目を向けた政策を出していなかった。"
  RUS_agricultural_economy_1: "農業経済"
@@ -14,8 +19,5 @@
  RUS_agricultural_economy_2_desc: "我が国の長く続いた農奴制と実質的に今も続く農家の貧困、国家の産業の秩序は近代国家には適切ではなく、その結果、絶望的なまでに非効率な経済体系が未だロシアには存在している。近代化の途上でこのような問題は一般的に解決されるが、これまでロシア帝国政府は農家に目を向けた政策を出していなかった。"
  RUS_low_research: "遅滞した技術革新"
  RUS_low_research_desc: "大戦争での勝利から、ロシアの技術研究は停滞している。このままでは近代化もままならない、前時代的国家となってしまうだろう。"
-
- RUS_MNE_Lyceum_idea:"帝国学術院"
- RUS_MNE_Lyceum_idea_desc:"国家機関が直接国民に対する教育を率先して行うことで、長期的な国民の識字率上昇につながるだろう。"
 
 
