日本周りの修正

--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -12,3 +12,9 @@
  SRI_pietro_nenni: "ピエトロ・ネンニ"
 
  RUS_georgy_zhukov: "ゲオルギー・ジューコフ"
+
+ JAP_tsuyoshi_inukai: "犬養毅"
+ JAP_fusanosuke_kuhara: "久原房之介"
+ JAP_chikuhei_nakajima: "中島知久平"
+ JAP_osachi_hamaguchi: "浜口雄幸"
+ JAP_chuji_machida: "町田忠治"
