--- a/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
@@ -1,6 +1,6 @@
 ﻿l_japanese:
 jap_19th_General_Election:"第１９回衆議院選挙"
-jap_19th_General_Election_desc:"内閣総理大臣"
+jap_19th_General_Election_desc:"内閣総理大臣は衆議院の解散を決定した"
 
 jap_Constitutional_Democratic_Party:"立憲民政党"
 jap_Constitutional_Democratic_Party_desc:""
@@ -25,8 +25,8 @@ jap_Continuation_of_Shidehara_foreign_policy_desc:""
 jap_constitutional_amendment:"憲法改正"
 jap_constitutional_amendment_desc:""
 
-jap_Rikken_Seiyūkai:"立憲政友会"
-jap_Rikken_Seiyūkai_desc:""
+jap_Rikken_Seiyukai:"立憲政友会"
+jap_Rikken_Seiyukai_desc:""
 jap_Continuation_of_Takahashi_Financing:"高橋財政の継続"
 jap_Continuation_of_Takahashi_Financing_desc:""
 jap_Keynesian_Studies_in_Practice:"ケインズ学の実践"
@@ -43,13 +43,13 @@ jap_policy_of_imperialisation:"皇民化政策"
 jap_policy_of_imperialisation_desc:""
 jap_Royal_Center_Definition:"皇室中心主義"
 jap_Royal_Center_Definition_desc:""
-jap_Developing_Mori_Diplomacy:森外交を展開"
+jap_Developing_Mori_Diplomacy:"森外交を展開"
 jap_Developing_Mori_Diplomacy_desc:""
 jap_Protect_the_Constitution:"憲法を守れ"
 jap_Protect_the_Constitution_desc:""
 
-jap_Shakai_Taishūtō:"社会大衆党"
-jap_Shakai_Taishūtō_desc:""
+jap_Shakai_Taishuto:"社会大衆党"
+jap_Shakai_Taishuto_desc:""
 jap_socialist_economy:"社会主義経済"
 jap_socialist_economy_desc:""
 jap_planned_economy:"計画経済"
