--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -108,9 +108,11 @@
  ITA_democrazia_cristiana_long: "キリスト教民主党"
  JAP_communism_party: "日本共産党"
  JAP_democratic_party: "立憲民政党"
- JAP_fascism_party: "大政翼賛会"
- JAP_neutrality_party_kodoha_long: "皇道派"
- JAP_neutrality_party_kodoha: "皇道派"
+ JAP_fascism_party: "国民同盟"
+ JAP_neutrality: "皇道派"
+ JAP_socialism_party: "日本無産党"
+ JAP_conservatism_party: "立憲政友会"
+ JAP_socialdemocratic_party: "社会大衆党"
  USA_communism_party: "アメリカ共産党"
  USA_democratic_party: "民主党"
  USA_republican_party: "共和党"
