--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -17,5 +17,6 @@
 
  RUS_MNE_Lyceum_idea:"帝国学術院"
  RUS_MNE_Lyceum_idea_desc:"国家機関が直接国民に対する教育を率先して行うことで、長期的な国民の識字率上昇につながるだろう。"
+ RUS_refinery_boost:"一ヵ年石油開発計画"
 
 
