--- a/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
@@ -8,6 +8,7 @@
   TR_Russia_siberia_tt.4: "§G海軍§!が行った遠征演習で以下の成果を得た。"
   TR_Russia_siberia_tt.5: "§G空軍§!が行った遠征演習で以下の成果を得た。"
   TR_Russia_siberia_tt.6: "§G産業研究者§!が行った遠征演習で以下の成果を得た。"
+  TR_Russia.tt.4: "油田地帯で大規模な§Yゴム生産事業§!を開始する。"
 
   TR_nosupport: "§Rこの選択肢は現バージョンでは実装されていない！§!"
   TR_focus_nosupport: "§Rこの選択肢には現実味がない§!"
