イランロシア戦争

--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -12,11 +12,27 @@
  TR_Russia.4.d:"シベリア地方には、専門家の指摘通り大量の有効活用できる資源が存在した。これらの土地に派遣された専門家たちは各々の専門分野におけるシベリアの価値について研究し、既にアカデミーへ送付されている。どちらにせよ、今回の測量で得た資源を利用して、我が国の近代化はさらに一歩先に進むだろう。"
  TR_Russia.4.a:"素晴らしい。"
 
+ TR_Russia.5.t:"ギーラーン危機"
+ TR_Russia.5.d:"ペトログラードの外務省に驚くべき報告が飛び込んできた。かつては帝国と激しい攻防を繰り広げていた中東のイランが、カスピ海において我が国の海軍艦艇に数発の射撃を行い、既に戦闘が開始されたとのことだ。\nイラン側は公的にこの事実を否定しているが、我々の安全保障のためにも帝国として行動を起こさなければならない。"
+ TR_Russia.5.a:"最後通牒を送れ。"
+ TR_Russia.5.b:"軍に戦闘命令を下せ。"
+
+ TR_Russia.6.t:"ロシアからの最後通牒"
+ TR_Russia.6.d:"今日未明、テヘランのロシア帝国大使から衝撃的な電報が届いた。\n"貴国の我が国に対する船舶攻撃は、我が国に対する戦争行為と捉えている。寛大なるツァーリは貴国に選択の時間を与えた。"という傲慢な文章から始まる一連の内容は、我が国の独立に対して唾をかけるような内容であった。\nこれに対する補填として、彼らはペルシア全体の支配を要求している。\nこの"保護の申し出"を受けるべきだろうか？"
+ TR_Russia.6.a:"かかってこい、相手になってやる！"
+ TR_Russia.6.b:"引き下がるべきだ。民衆のためにも。"
+
+　TR_Russia.7.t:"イランが拒否！"
+  TR_Russia.7.d:"イランは先日の我が国に対する攻撃の補填を行わないと公式に宣言した。\n彼らに送った最後通牒はことごとく拒否され、国境には我が国を侵略しようともくろむイラン軍が集まっている。\n総動員を宣言したイランに、もはや我が国と戦争をしないという道はないだろう。我々はロシアを守るための勇気ある行動を行わなければならない！"
+　TR_Russia.7.a:"よろしい、ならば戦争だ。"
 
 
- TR_Russia.6.t: "テヘラン講和会議"
- TR_Russia.6.d: "首都テヘランを失ったイランは、我々に和平と休戦を申し出てきた。既にイラン北部は我々の工作により複数の反イラン勢力を活発化させている。我々箱の会議で何を要求すべきだろう？"
- TR_Russia.6.a: "イラン北部を「解放」しよう。"
+　TR_Russia.8.t:"イランが引き下がる"
+　TR_Russia.8.d:"イラン外務省は"真摯な"対応をしてきた。\n彼らは我が国の保護下へ入り、北部の割譲を容認すると宣言したのだ。結果的に我が国の勝利に終わったが、戦を行わずしてこのような結果になったことで、周辺諸国は我が国の威圧的外交ではないかと懸念している。"
+　TR_Russia.8.a:"協商へようこそ！"
+
+
+
 
  TR_Russia_news.1.t: "ロシア皇帝の暗殺"
  TR_Russia_news.1.d: "一月中頃、ロシアの冬将軍はすでに大地を覆い、吹雪の中モスクワに到着した皇帝アレクセイを一発の銃弾が襲った。長らく政府によって抑圧されてきたボリシェヴィキは、入念なテロルの計画を実行に移した。皇帝アレクセイの持病、血友病の影響もあり、その日のうちに皇帝は急いで送り込まれた病院で医師の治療もやむなく息を引き取った。ペトログラードはこの知らせに動揺している。\n不幸中の幸いは、帝室一同が集まっていた宮殿に仕掛けられた爆弾が近衛兵により間一髪で解除されたことであろう。ただ、もはやロシア帝国にかつての秩序は存在せず、あるのは反動的な宮廷とそれに反抗的な一部の政府、そして陰で暗躍する共産主義者だけだ。"
@@ -29,9 +45,26 @@
  TR_Russia_news.2.a: "改革こそ力である！"
  TR_Russia_news.2.b: "そうか。"
 
- TR_Russia_news.3.t: "テヘラン条約"
- TR_Russia_news.3.d: "この頃続いていたイランとロシアにおけるカスピ海南部を巡った戦争は、ロシアに有利な結果で終着点を迎えたといえよう。テヘランにロシア帝国全権代表が訪れ、イラン側代表と70時間にも及ぶ会議の末に両者は平和に関する条約を締結した。\n内容は大幅にロシアが利益を得るもので、ロシアはカスピ海南部とテヘラン以北のイラン領土を民政下に置くことになり、「内政不安」を理由にペルシャ保護領として残りの地域はロシアに保護される。\nこのような結果は国際社会における独立国の立場を損なうあってはならない事態だとイギリス外務省はロシア帝国に非難声明を送付したと説明したが、ロシア帝国側はこれを黙殺している。"
- TR_Russia_news.3.a: "グレートゲームは終わりか？"
- TR_Russia_news.3.b: "我々は陰で泣いている。"
- TR_Russia_news.3.c: "奴らは見失ってしまったのだ！"
- TR_Russia_news.3.e: "注視すべきだ。"
+
+ TR_Russia_news.3.t:"ギーラーン危機"
+ TR_Russia_news.3.d:"突如としてロシアとイランの間の緊張が高まっている。\nロシアの声明によると、イランギーラーン州沖から出発した不審な船舶をロシア海軍が監視中に、該当する船から複数回の射撃を受けたとのことだ。\nイラン側はこれは軍による作戦ではない事故であるとし、謝罪の意を示したが、ロシアはこれに戦争行為であると指摘した。\n両国は国境に多くの軍を集中させており、近くこの紛争が激化することになるのは間違えないだろう。"
+ TR_Russia_news.3.a:"侵略者に鉄槌を！"
+ TR_Russia_news.3.b:"南下のための侵略政策だ"
+ TR_Russia_news.3.c:"悲惨だな。"
+
+ TR_Russia_news.4.t:"イランが侵略される！"
+ TR_Russia_news.4.d:"イラン外務省は今日、予告なしにギーラーン問題の交渉を打ち切られ、ロシアから侵略を受けたと声明を出した。\n世界各国はこのロシアの行動に対して賛否両論であるが、ロシアの仮想敵共産主義陣営第三インターナショナルに対抗するために手を組むべき旧協商は強い反発を示している。\nロシア国内の意見も安定しておらず、ロシア軍は突然の命令に無計画攻勢を行っている。"
+ TR_Russia_news.4.a:"カスピ海を我が手に！"
+ TR_Russia_news.4.b:"聖戦だ。"
+ TR_Russia_news.4.c:"なんということだ！"
+
+ TR_Russia_news.5.t:"ペルシア戦争"
+ TR_Russia_news.5.d:"イランはギーラーン危機を根拠にロシアから送られた最後通牒をいずれも拒否した。\nロシア帝国は宣言した通りに既に攻撃を開始しており、いくつかの戦線では突破しているようだ。\nロシアの旧時代的な軍隊の戦闘能力を批判する専門家もいるが、現在の戦況は大きくロシアに傾いている。"
+ TR_Russia_news.5.a:"カスピ海を我が手に！"
+ TR_Russia_news.5.b:"神が我らをを守るだろう。"
+ TR_Russia_news.5.c:"そうか。"
+
+ TR_Russia_news.6.t:"テヘラン合意"
+ TR_Russia_news.6.d:"イランはギーラーン危機の解決点を、独立の喪失を引き換えにした平和に見出したらしい。\nテヘランで行われた外交官同士の会議の結果、イランは多額の賠償金を支払うとともにロシア帝国の保護を受け入れることになった。\n既にイラン国内では行政区分の再編が行われ、北部はロシアが直轄保護している。"
+ TR_Russia_news.6.a:"自業自得だな。"
+ TR_Russia_news.6.b:"これが平和か。"
