--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -14,3 +14,9 @@
 
  RUS_MNE_Lyceum:"帝国学術院の拡充"
  RUS_MNE_Lyceum_desc:"国立教育省によって運営される帝国の基礎教育局である帝国学術院を、シベリア測量で得た資源を利用して各地に組織的に建設する。"
+ RUS_oil_to_rubber_factory:"ゴム生産工場の建設"
+ RUS_oil_to_rubber_factory_desc:"我が国ではゴムが天然産出せず、産業の足かせとなっている。国営の大規模な精製工場を建設することで、産業の活性化と共に、余剰分による外貨獲得を見込めるだろう。"
+ RUS_remove_census:"遊牧民定住政策"
+ RUS_remove_census_desc:"我が国の遊牧民は中央アジアに集中している。彼らに対し住居を提供し、定住させることができれば固定した戸籍によってより効率的な徴兵が行われるだろう。"
+ RUS_battle_with_PER:"ギーラーン危機"
+ RUS_battle_with_PER_desc:"カスピ海において我が国が"正当な"監視活動を行っていたところ、驚くべきことにイランは我々に対し攻撃をした。\n我が国の安全なカスピ海を守るために、南部の脅威を取り除かなければならない。"
