イランロシア戦争完成(講和ニュースとロシア敗北以外)

--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -22,14 +22,20 @@
  TR_Russia.6.a:"かかってこい、相手になってやる！"
  TR_Russia.6.b:"引き下がるべきだ。民衆のためにも。"
 
-　TR_Russia.7.t:"イランが拒否！"
-  TR_Russia.7.d:"イランは先日の我が国に対する攻撃の補填を行わないと公式に宣言した。\n彼らに送った最後通牒はことごとく拒否され、国境には我が国を侵略しようともくろむイラン軍が集まっている。\n総動員を宣言したイランに、もはや我が国と戦争をしないという道はないだろう。我々はロシアを守るための勇気ある行動を行わなければならない！"
-　TR_Russia.7.a:"よろしい、ならば戦争だ。"
+ TR_Russia.7.t:"イランが拒否！"
+ TR_Russia.7.d:"イランは先日の我が国に対する攻撃の補填を行わないと公式に宣言した。\n彼らに送った最後通牒はことごとく拒否され、国境には我が国を侵略しようともくろむイラン軍が集まっている。\n総動員を宣言したイランに、もはや我が国と戦争をしないという道はないだろう。我々はロシアを守るための勇気ある行動を行わなければならない！"
+ TR_Russia.7.a:"よろしい、ならば戦争だ。"
 
 
-　TR_Russia.8.t:"イランが引き下がる"
-　TR_Russia.8.d:"イラン外務省は"真摯な"対応をしてきた。\n彼らは我が国の保護下へ入り、北部の割譲を容認すると宣言したのだ。結果的に我が国の勝利に終わったが、戦を行わずしてこのような結果になったことで、周辺諸国は我が国の威圧的外交ではないかと懸念している。"
-　TR_Russia.8.a:"協商へようこそ！"
+ TR_Russia.8.t:"イランが引き下がる"
+ TR_Russia.8.d:"イラン外務省は"真摯な"対応をしてきた。\n彼らは我が国の保護下へ入り、北部の割譲を容認すると宣言したのだ。結果的に我が国の勝利に終わったが、戦を行わずしてこのような結果になったことで、周辺諸国は我が国の威圧的外交ではないかと懸念している。"
+ TR_Russia.8.a:"協商へようこそ！"
+
+
+ TR_Russia.12.t:"テヘラン会議"
+ TR_Russia.12.d:"国土の多くを我が国によって失ったイランは、テヘランでの講和会議を申し出てきた。\n我が国はこの戦争に大量の戦費を投じ、大規模な予算を編成した。このような戦争の勝利にふさわしい対価はなんであろうか？"
+ TR_Russia.12.a:"北部を割譲させ、賠償と保護だ。"
+ TR_Russia.12.b:"北半分を割譲させ、保護だ。"
 
 
 
@@ -68,3 +74,15 @@
  TR_Russia_news.6.d:"イランはギーラーン危機の解決点を、独立の喪失を引き換えにした平和に見出したらしい。\nテヘランで行われた外交官同士の会議の結果、イランは多額の賠償金を支払うとともにロシア帝国の保護を受け入れることになった。\n既にイラン国内では行政区分の再編が行われ、北部はロシアが直轄保護している。"
  TR_Russia_news.6.a:"自業自得だな。"
  TR_Russia_news.6.b:"これが平和か。"
+
+ TR_Russia_news.7.t:"テヘラン陥落"
+ TR_Russia_news.7.d:"紛争が激化し、全面戦争に突入したロシアとのイランの戦いは、ロシアに有利な状況にある。\nロシア軍は今日にもテヘランに突入し、市内の要衝を完全に制圧したとのことだ。圧倒的な力の前にイランはひれ伏すしかないが、いまだにイランは強く抵抗している。\nこのままロシア軍は破竹の勢いで南下し、政府の移転先に対する攻撃作戦を行うだろうと専門家は述べている。"
+ TR_Russia_news.7.a:"我が国の偉大な勝利だ"
+ TR_Russia_news.7.b:"我々はまだ負けていない"
+ TR_Russia_news.7.c:"鷲はまだ堕ちていなかったのか"
+
+ TR_Russia_news.8.t:"バクー陥落"
+ TR_Russia_news.8.d:"イラン当局によると、ギーラーン危機に端を発するイランとロシアの戦争において、戦況は意外にもイランの有利な方向に進んでいるようだ。\nイランは高度なゲリラ戦でロシアの初撃を抑えた後、綿密な計画による大規模攻勢で複数の陣地を奪い取り、背後に回ってバクーまで進軍した。\nロシア軍の重要な燃料獲得源であるバクーが陥落した今、落ちかける鷲はどのようにこの危機を乗り越えるのだろうか。"
+ TR_Russia_news.8.a:"そんなものくれてやる！"
+ TR_Russia_news.8.b:"神の裁きだ。"
+ TR_Russia_news.8.c:"こんなものだったのか？"
