--- a/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
@@ -12,6 +12,11 @@
   TR_Russia.tt.5: "§Rイランとの戦争へ突き進むことになる！§!"
   TR_Russia_per_tt.1: "§R彼らは拒否するだろう！§!"
   TR_Russia_per_tt.2: "§R国際社会からの強い批判を受けることになる。§!"
+  TR_Russia_per_tt.3: "§Yイラン§!は戦勝点の§R6割§!を失うと降伏するだろう！"
+  TR_Russia_per_tt.4: "§Yロシア§!は§Rツァリーツィン§!、§Rロストフ§!、§Rバクー§!を失うと降伏するだろう！"
+
+  TR_Russia_per_peace_tt.1:"§Yダブリーズ§!、§Yギーラーン§!、§Yサムナーン§!、§Yホラーサーン§!は§Gロシア帝国§!の直轄保護領として§R併合§!される。\n§Yテヘラン§!は§Gロシア帝国§!の民政管理地区として§R非武装化§!される。\n§Rイラン§!は国家再建のために§Gロシア帝国§!の§R保護領§!となる。\n§Rイラン§!は§Gロシア帝国§!に賠償金を支払う。"
+  TR_Russia_per_peace_tt.2:"§Yダブリーズ§!、§Yギーラーン§!、§Yサムナーン§!、§Yホラーサーン§!、§Yテヘラン§!、§Yクルディスタン§!、§Yハマダーン§!は§Gロシア帝国§!の直轄保護領として§R併合§!される。\n§Rイラン§!は国家再建のために§Gロシア帝国§!の§R保護領§!となる。"
 
   TR_nosupport: "§Rこの選択肢は現バージョンでは実装されていない！§!"
   TR_focus_nosupport: "§Rこの選択肢には現実味がない§!"
