--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -46,6 +46,7 @@
  rexism_desc: "レクシズムは自由主義・共産主義の理念と対立する思想であり、コーポラティズム的経済政策を主張する忠実な保守主義・国家主義的運動である。次第にポピュリズム的、権威主義的なレトリックを採用しながら、この思想は他のファシズム運動に接近している。"
  neutrality: "中道主義"
  neutrality_noun: "中道主義"
+ theocracy: "神権主義"
  neutrality_desc: "権威主義政権"
  despotism: "専制政治"
  despotism_desc: "専制政治は絶対的な権力を握る一人の人物によって統治される政体である。"
@@ -57,6 +58,10 @@
  centrism_desc: "穏健主義は適切に現在と未来のニーズに対処する常識的な解決策の実現を望む政府の一形態である。そしてこれは国民の負託を支えとしてこれらのニーズの状況におけるリスクと許容量を考慮し、公益を提供する。"
  anarchism: "無政府主義"
  anarchism_desc: "無政府主義とは、権威そのものを拒否することであり、社会を単一の中央集権国家ではなく、自己管理と自治の集団に分割することを促進するものである。"
+ anarchism_party: "無政府主義評議会"
+ socialism_party: "社会党"
+ socialdemocratic_party: "社会民主党"
+ conservatism_party: "保守党"
  Lcoalition: "左派連立"
  Rcoalition: "右派連立"
  GER_fascism_party: "NSAP"
@@ -83,8 +88,10 @@
  POL_natdem_party_long: "国民民主党"
  POL_communism_party: "KPP"
  POL_communism_party_long: "ポーランド共産党"
- POL_democratic_party: "PSL"
- POL_democratic_party_long: "ポーランド農民党"
+ POL_democratic_party: "PLD"
+ POL_democratic_party_long: "自由民主党"
+ POL_socialdemocratic_party: "PSU"
+ POL_socialdemocratic_party_long: "ポーランド農民連合"
  POL_neutrality_party: "政府翼賛無政党ブロック"
  POL_OZON_party: "OZN"
  POL_OZON_party_long: "国民再統一同盟" #Camp of National Unity
