日本の通常ルートの政治NFの効果付与

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -920,6 +920,8 @@
  JAP_fascism_DEF: "大日本帝国"
  JAP_democratic: "大日本帝国"
  JAP_democratic_DEF: "大日本帝国"
+ JAP_conservatism: "大日本帝国"
+ JAP_conservatism_DEF: "大日本帝国"
  JAP_neutrality: "大日本帝国"
  JAP_neutrality_DEF: "大日本帝国"
  JAP_communism: "日本人民共和国"
@@ -928,6 +930,7 @@
  JAP_democratic_ADJ: "日本"
  JAP_neutrality_ADJ: "日本"
  JAP_communism_ADJ: "日本"
+ JAP_conservatism_ADJ: "大日本帝国"
  JAP: "日本"
  JAP_DEF: "日本"
  JAP_ADJ: "日本"
