--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -116,10 +116,11 @@
  JAP_communism_party: "日本共産党"
  JAP_democratic_party: "立憲民政党"
  JAP_fascism_party: "国民同盟"
- JAP_neutrality: "皇道派"
+ JAP_neutrality_party: "皇道派"
  JAP_socialism_party: "日本無産党"
  JAP_conservatism_party: "立憲政友会"
  JAP_socialdemocratic_party: "社会大衆党"
+ JAP_anarchism_party: "日本無政府共産党"
  USA_communism_party: "アメリカ共産党"
  USA_democratic_party: "民主党"
  USA_republican_party: "共和党"
