00-NF作成時の注意.md を更新

--- a/common/national_focus/00-NF作成時の注意.md
+++ b/common/national_focus/00-NF作成時の注意.md
@@ -1,4 +1,9 @@
 NF作成時の注意
+ファイル作成時は
+```
+<country_name>.text
+```
+というファイル名にすること。
 1.新規作成の際は以下のコードをコピーしてください。（ただし<>の部分は自分のものに置き換えてください。）
 ```
 focus_tree = {
