--- a/common/bookmarks/00_ブックマーク編集上の注意.md
+++ b/common/bookmarks/00_ブックマーク編集上の注意.md
@@ -1,1 +1,81 @@
 # ブックマーク編集上の注意
+ブックマークの構造は以下のようになる。
+```
+bookmarks = {
+	bookmark = {
+		name = "BOOKMARK_NAME"
+		desc = "BOOKMARK_DESC"
+		date = YYYY.MM.DD.HH
+		picture = "BOOKNARK_PICTURE"
+		default_country = "TAG"
+		default = yes
+		"FRA"={
+			history = "FRA_GATHERING_STORM_DESC"
+			ideology = democratic
+			# ideas = {
+			# 	FRA_victors_of_wwi
+			# 	FRA_disjointed_government
+			# 	FRA_protected_by_the_maginot_line
+			# }
+			# focuses = {
+			# 	FRA_form_the_popular_front
+			# 	FRA_revive_the_national_bloc
+			# 	FRA_france_leads
+			# }
+		}
+		"SRI"={
+			history = "ITA_GATHERING_STORM_DESC"
+			ideology = fascism	
+		}
+		"GER"={
+			history = "GER_GATHERING_STORM_DESC"
+			ideology = fascism
+		}
+		"---"={
+			history = "OTHER_GATHERING_STORM_DESC"
+		}
+		"RUS"={
+			history = "SOV_GATHERING_STORM_DESC"
+			ideology = communism
+		}
+		"ENG"={
+			history = "ENG_GATHERING_STORM_DESC"
+			ideology = democratic
+			# ideas = {
+			# 	stiff_upper_lip
+			# 	ENG_the_war_to_end_all_wars
+			# 	george_v
+			# }
+			# focuses = {
+			# 	ENG_imperial_federation
+			# 	ENG_the_kings_party
+			# 	ENG_organize_the_blackshirts
+			# }
+		}
+		"USA"={
+			history = "USA_GATHERING_STORM_DESC"
+			ideology = democratic
+			# ideas = {
+			# 	home_of_the_free
+			# 	great_depression
+			# 	undisturbed_isolation
+			# }
+			# focuses = {
+			# 	USA_war_plan_black
+			# 	USA_limited_intervention
+			# 	USA_reestablish_the_gold_standard
+			# }
+		}
+		"JAP"={
+			minor = yes
+			history = "JAP_GATHERING_STORM_DESC"
+			ideology = fascism		
+		}
+		effect = {
+			randomize_weather = 22345 # <- Obligatory in every bookmark !
+			#123 = { rain_light = yes }
+		}
+	}
+}
+
+```
