--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -935,8 +935,8 @@
  STATE_933:0 "シェットランド諸島"
  STATE_934:0 "シュコーデル"
  STATE_935:1 "マラムレシュ"
- STATE_936:1 "ダンケルク"
- STATE_937:1 "カレー"
+ STATE_936:1 "シェルブール"
+ STATE_937:1 "イギリス領カレー"
  STATE_938:1 "ティラスポリ"
  STATE_939:1 "グラッツ"
  STATE_940:1 "ヴィソチナ"
