日本NF名の日本語化

--- a/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
@@ -71,29 +71,126 @@ jap_Cooperation_with_Socialist_Countries_desc:""
 jap_revise_the_constitution:"憲法を変えろ"
 jap_revise_the_constitution_desc:""
 
+jap_NAVY_1_1:"第三次建造計画"
+jap_NAVY_1_1_desc:""
+jap_NAVY_1_2_desc:""
+jap_NAVY_1_2:"第三次建造計画の始動"
+jap_NAVY_1_3:"第四次建造計画に向けて"
+jap_NAVY_1_3_desc:""
+jap_NAVY_2_1:"海軍改革１"
+jap_NAVY_2_1_desc:""
+jap_NAVY_2_2:"海軍改革２"
+jap_NAVY_2_2_desc:""
+jap_NAVY_2_3:"海軍改革３"
+jap_NAVY_2_3_desc:""
+jap_NAVY_3_1:"主力艦の研究"
+jap_NAVY_3_1_desc:""
+jap_NAVY_3_2:"小型艦の研究"
+jap_NAVY_3_2_desc:""
+jap_NAVY_3_3:"潜水艦の研究"
+jap_NAVY_3_3_desc:""
+jap_NAVY_10:"海軍の未来"
+jap_NAVY_10_desc:""
 
+jap_AIRFORCE_1_1:"航空隊の整備"
+jap_AIRFORCE_1_1_desc:""
+jap_AIRFORCE_1_2:"航空要員の整備"
+jap_AIRFORCE_1_2_desc:""
+jap_AIRFORCE_1_3:"エース制度"
+jap_AIRFORCE_1_3_desc:""
+jap_AIRFORCE_2_1:"空軍改革１"
+jap_AIRFORCE_2_1_desc:""
+jap_AIRFORCE_2_2:"空軍改革２"
+jap_AIRFORCE_2_2_desc:""
+jap_AIRFORCE_2_3:"空軍改革３"
+jap_AIRFORCE_2_3_desc:""
+jap_AIRFORCE_3_1:"小型機の研究"
+jap_AIRFORCE_3_1_desc:""
+jap_AIRFORCE_3_2:"中型機の研究"
+jap_AIRFORCE_3_2_desc:""
+jap_AIRFORCE_3_3:"エンジンの研究"
+jap_AIRFORCE_3_3_desc:""
+jap_AIRFORCE_10:"航空隊の未来"
+jap_AIRFORCE_10_desc:""
 
+jap_ARMY_1_1:"陸軍軍拡方針"
+jap_ARMY_1_1_desc:""
+jap_ARMY_1_2:"機甲師団の整備"
+jap_ARMY_1_2_desc:""
+jap_ARMY_1_3:"大和魂"
+jap_ARMY_1_3_desc:""
+jap_ARMY_2_1:"陸軍改革１"
+jap_ARMY_2_1_desc:""
+jap_ARMY_2_2:"陸軍改革２"
+jap_ARMY_2_2_desc:""
+jap_ARMY_2_3:"陸軍改革３"
+jap_ARMY_2_3_desc:""
+jap_ARMY_3_1:"主力の研究"
+jap_ARMY_3_1_desc:""
+jap_ARMY_3_2:"砲火力の強化"
+jap_ARMY_3_2_desc:""
+jap_ARMY_3_3:"戦車開発"
+jap_ARMY_3_3_desc:""
+jap_ARMY_10:"特殊部隊"
+jap_ARMY_10_desc:"陸軍の未来"
 
+jap_Integration_of_Army_and_Navy:"陸海軍の統合に向けて"
+jap_Integration_of_Army_and_Navy_desc:""
+jap_NAVY:"海軍の優越"
+jap_NAVY_desc:""
+jap_Establishment_of_the_Ministry_of_War:"兵部省の復活"
+jap_Establishment_of_the_Ministry_of_War_desc:""
+jap_ARMY:"陸軍の優越"
+jap_ARMY_desc:""
 
+jap_Foreign_Policy:"外交方針を確認"
+jap_Foreign_Policy_desc:""
+jap_cooperation:"協調外交"
+jap_cooperation_desc:""
+jap_japan-england:"古き同盟の復活"
+jap_japan-england_desc:""
+jap_japan-usa:"太平洋を平和の海に"
+jap_japan-usa_desc:""
+jap_Logistical_support:"後方支援"
+jap_Logistical_support_desc:""
+jap_massive_troops:"部隊の派兵"
+jap_massive_troops_desc:""
+jap_War_lessons_from_our_allies:"戦訓を獲得"
+jap_War_lessons_from_our_allies_desc:""
+jap_Convention_on_the_Elimination_of_All_Forms_of_Racial_Discrimination:"人種差別撤廃条約を提案"
+jap_Convention_on_the_Elimination_of_All_Forms_of_Racial_Discrimination_desc:""
+jap_unyielding:"強硬外交"
+jap_unyielding_desc:""
+jap_Greater_East_Asian_Co-prosperity_Sphere_concept:"大東亜共栄圏"
+jap_Greater_East_Asian_Co-prosperity_Sphere_concept_desc:""
+jap_Find_an_ally:"同盟国を探す"
+jap_Find_an_ally_desc:""
+jap_Create_allies:"同盟国を作る"
+jap_Create_allies_desc:""
+jap_Holding_of_the_Greater_East_Asia_Conference:"大東亜会議を主催"
+jap_Holding_of_the_Greater_East_Asia_Conference_desc:""
+jap_war_plan:"戦争計画"
+jap_war_plan_desc:""
+jap_final_war:"最終戦争へ"
+jap_final_war_desc:""
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+jap_social_reform:"社会改革"
+jap_social_reform_desc:""
+jap_agrarian_reform_1:"農地改革１"
+jap_agrarian_reform_1_desc:""
+jap_agrarian_reform_2:"農地改革２"
+jap_agrarian_reform_2_desc:""
+jap_agrarian_reform_3:"農地改革３"
+jap_agrarian_reform_3_desc:""
+jap_zaibatsu:"財閥１"
+jap_zaibatsu_desc:""
+jap_low:"過度経済力集中排除法"
+jap_low_desc:""
+jap_zaibutsu_2:"財閥２"
+jap_zaibutsu_2_desc:""
+jap_pollution:"公害問題１"
+jap_pollution_desc:""
+jap_pollution_2:"公害問題２"
+jap_pollution_2_desc:""
+jap_pollution_3:"公害問題３"
+jap_pollution_3_desc:""
