--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -37,6 +37,10 @@
  TR_Russia.12.a:"北部を割譲させ、賠償と保護だ。"
  TR_Russia.12.b:"北半分を割譲させ、保護だ。"
 
+ TR_Russia.14.t:"テヘラン会議"
+ TR_Russia.14.d:"主要都市を急速に失ったロシア帝国は、愚かにも我々に停戦を申し出てきた。\n我が国はこの戦争で理不尽な侵略を受け、多くの臣民を失った。神のための聖戦の勝利にふさわしい報酬はなんであろうか？"
+ TR_Russia.14.a:"永久の平和を神へ献上するべきだ。"
+ TR_Russia.14.b:"アケネメスの栄光をもう一度！"
 
 
 
@@ -71,7 +75,7 @@
  TR_Russia_news.5.c:"そうか。"
 
  TR_Russia_news.6.t:"テヘラン合意"
- TR_Russia_news.6.d:"イランはギーラーン危機の解決点を、独立の喪失を引き換えにした平和に見出したらしい。\nテヘランで行われた外交官同士の会議の結果、イランは多額の賠償金を支払うとともにロシア帝国の保護を受け入れることになった。\n既にイラン国内では行政区分の再編が行われ、北部はロシアが直轄保護している。"
+ TR_Russia_news.6.d:"イランはギーラーン危機の解決点を、独立の喪失を引き換えにした平和に見出したらしい。\nテヘランで行われた外交官同士の会議の結果、イランはロシアの複数の要求を遅滞なく受け入れることに同意したとともに、ロシア帝国の保護を受け入れることになった。\n既にイラン国内では行政区分の再編が行われ、北部はロシアが直轄保護している。"
  TR_Russia_news.6.a:"自業自得だな。"
  TR_Russia_news.6.b:"これが平和か。"
 
@@ -86,3 +90,11 @@
  TR_Russia_news.8.a:"そんなものくれてやる！"
  TR_Russia_news.8.b:"神の裁きだ。"
  TR_Russia_news.8.c:"こんなものだったのか？"
+
+ TR_Russia_news.9.t:"テヘラン条約"
+ TR_Russia_news.9.d:"戦乱の地、イランに平和が訪れたとの知らせだ。\n今日ロシア占領下のテヘランで複数のイラン外交官とロシア外交官が目撃され、その後まもなく停戦が宣言された。\n停戦条件はイラン国家の解体とその保護、北部地域のロシアによる直轄管理とテヘランの非武装化など、非常に厳しいものとなった。\n国際社会は大戦争、及び第二次ギリシャ=トルコ戦争から大きな戦争の悲劇を経験してこなかったが、突如としてその平和は打ち破られた。\n情勢はまずます不安化する中、近代化に奔走するロシア帝国は次にどこに手を伸ばすのだろうか？"
+ TR_Russia_news.9.a:"グレートゲームは終わりか？"
+ TR_Russia_news.9.b:"終焉だ。"
+ TR_Russia_news.9.c:"悲惨だな。"
+
+ TR_Russia_news.10.d:"戦乱の地、イランに平和が訪れたとの知らせだ。\n今日ロシア占領下のテヘランで複数のイラン外交官とロシア外交官が目撃され、その後まもなく停戦が宣言された。\n停戦条件はイラン国家の解体とその保護、大幅な北部領土の割譲など、イランにとってこの上なく厳しいものとなった。\n国際社会は大戦争、及び第二次ギリシャ=トルコ戦争から大きな戦争の悲劇を経験してこなかったが、突如としてその平和は打ち破られた。\n情勢はまずます不安化する中、近代化に奔走するロシア帝国は次にどこに手を伸ばすのだろうか？"
