--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -23,5 +23,7 @@
  RUS_dropped_army:"大義なき侵略"
  RUS_money_by_PER:"イランからの賠償"
  RUS_money_to_RUS:"ロシアへの賠償"
+ RUS_money_by_RUS:"ロシアからのの賠償"
+ RUS_money_to_PER:"ペルシャへの賠償"
 
 
