--- a/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
@@ -16,7 +16,20 @@
   TR_Russia_per_tt.4: "§Yロシア§!は§Rツァリーツィン§!、§Rロストフ§!、§Rバクー§!を失うと降伏するだろう！"
 
   TR_Russia_per_peace_tt.1: "§Yダブリーズ§!、§Yギーラーン§!、§Yサムナーン§!、§Yホラーサーン§!は§Gロシア帝国§!の直轄保護領として§R併合§!される。\n§Yテヘラン§!は§Gロシア帝国§!の民政管理地区として§R非武装化§!される。\n§Rイラン§!は国家再建のために§Gロシア帝国§!の§R保護領§!となる。\n§Rイラン§!は§Gロシア帝国§!に賠償金を支払う。"
+  TR_Russia_per_peace_tt.1_1: "§Yダブリーズ§!、§Yギーラーン§!、§Yサムナーン§!、§Yホラーサーン§!は§Gロシア帝国§!の直轄保護領として§R併合§!される。\n§Rイラン§!は国家再建のために§Gロシア帝国§!の§R保護領§!となる。"
   TR_Russia_per_peace_tt.2: "§Yダブリーズ§!、§Yギーラーン§!、§Yサムナーン§!、§Yホラーサーン§!、§Yテヘラン§!、§Yクルディスタン§!、§Yハマダーン§!は§Gロシア帝国§!の直轄保護領として§R併合§!される。\n§Rイラン§!は国家再建のために§Gロシア帝国§!の§R保護領§!となる。"
+  TR_Russia_per_peace_tt.3: "§Yアゼルバイジャン§!、§Yアルメニア§!、§Yグルジア§!、§アブハジア§!、§Yアシハバード§!、§Yタシャウズ§!、は§Gペルシャ帝国§!の150年前の領土として§R中核集として奪還§!される。\n§Rコーカサス山脈の諸州§!は安全保障のために§Gペルシャ帝国§!が一方的に破棄可能な§R非武装地帯§!となる。n§Rロシア帝国§!は§Gペルシャ帝国§!に賠償金を支払う。"
+
+
+
+
+
+
+
+  :"§Gロシア§!から略奪した機器とバクーの施設を工場に転換する！"
+
+
+
   TR_North_Italy_win_soc_tt: "§Yイタリア半島§!は§R$TR_North_Italy_name$§!により統一された。\n§G$TR_South_Italy_name$§!は§Yドデカネス諸島§!へと§Y亡命§!した！"
   TR_North_Italy_name: "北イタリア"
   TR_South_Italy_name: "南イタリア"
