--- a/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
@@ -18,7 +18,8 @@
   TR_Russia_per_peace_tt.1: "§Yダブリーズ§!、§Yギーラーン§!、§Yサムナーン§!、§Yホラーサーン§!は§Gロシア帝国§!の直轄保護領として§R併合§!される。\n§Yテヘラン§!は§Gロシア帝国§!の民政管理地区として§R非武装化§!される。\n§Rイラン§!は国家再建のために§Gロシア帝国§!の§R保護領§!となる。\n§Rイラン§!は§Gロシア帝国§!に賠償金を支払う。"
   TR_Russia_per_peace_tt.1_1: "§Yダブリーズ§!、§Yギーラーン§!、§Yサムナーン§!、§Yホラーサーン§!は§Gロシア帝国§!の直轄保護領として§R併合§!される。\n§Rイラン§!は国家再建のために§Gロシア帝国§!の§R保護領§!となる。"
   TR_Russia_per_peace_tt.2: "§Yダブリーズ§!、§Yギーラーン§!、§Yサムナーン§!、§Yホラーサーン§!、§Yテヘラン§!、§Yクルディスタン§!、§Yハマダーン§!は§Gロシア帝国§!の直轄保護領として§R併合§!される。\n§Rイラン§!は国家再建のために§Gロシア帝国§!の§R保護領§!となる。"
-  TR_Russia_per_peace_tt.3: "§Yアゼルバイジャン§!、§Yアルメニア§!、§Yグルジア§!、§アブハジア§!、§Yアシハバード§!、§Yタシャウズ§!、は§Gペルシャ帝国§!の150年前の領土として§R中核集として奪還§!される。\n§Rコーカサス山脈の諸州§!は安全保障のために§Gペルシャ帝国§!が一方的に破棄可能な§R非武装地帯§!となる。n§Rロシア帝国§!は§Gペルシャ帝国§!に賠償金を支払う。"
+  TR_Russia_per_peace_tt.3: "§Yアゼルバイジャン§!、§Yアルメニア§!、§Yグルジア§!、§Yアブハジア§!、§Yアシハバード§!、§Yタシャウズ§!、は§Gペルシャ帝国§!の150年前の領土として§R中核州として奪還§!される。\n§Rコーカサス山脈の諸州§!は安全保障のために§Gペルシャ帝国§!が一方的に破棄可能な§R非武装地帯§!となる。\n§Rロシア帝国§!は§Gペルシャ帝国§!に賠償金を支払う。"
+  TR_Russia_per_peace_tt.4: "§Yアゼルバイジャン§!、§Yアルメニア§!、§Yグルジア§!、§Yアブハジア§!、§Yアシハバード§!、§Yタシャウズ§!は§Gペルシャ帝国§!の150年前の領土として§R中核州として奪還§!される。§Yエカテリノダール§!、§Yスタヴロポリ§!、§Yグロズヌイ§!、§Yチェチェンイングーシ§!、§Y北オセチア§!、§Yカバルダ=バルカル§!、§Yコーカサス山脈§!、§Yウスチウルト§!、§Yカラカルパクスタン§!、§Yヒヴァ§!、§Yブハラ§!は§Gアケネメス朝§!の領土として§R奪還§!される。\n§Rロシア帝国§!は§Gペルシャ帝国§!に賠償金を支払う。"
 
 
 
@@ -26,7 +27,7 @@
 
 
 
-  :"§Gロシア§!から略奪した機器とバクーの施設を工場に転換する！"
+  TR_Persia_tt.1:"§Gロシア§!から略奪した機器とバクーの施設を工場に転換する！"
 
 
 
