--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -98,3 +98,14 @@
  TR_Russia_news.9.c:"悲惨だな。"
 
  TR_Russia_news.10.d:"戦乱の地、イランに平和が訪れたとの知らせだ。\n今日ロシア占領下のテヘランで複数のイラン外交官とロシア外交官が目撃され、その後まもなく停戦が宣言された。\n停戦条件はイラン国家の解体とその保護、大幅な北部領土の割譲など、イランにとってこの上なく厳しいものとなった。\n国際社会は大戦争、及び第二次ギリシャ=トルコ戦争から大きな戦争の悲劇を経験してこなかったが、突如としてその平和は打ち破られた。\n情勢はまずます不安化する中、近代化に奔走するロシア帝国は次にどこに手を伸ばすのだろうか？"
+
+ TR_Russia_news.11.t:"テヘラン条約"
+ TR_Russia_news.11.d:"戦乱の地、イランで驚くべき逆転劇が起きた。\nイラン当局はロシア政府に対して最終降伏勧告を送付し、ロシアとの停戦協定が合意に至ったと発表した。\nこれは事実上のイランによる戦争の勝利であり、ロシアという無敗の列強国に対して、侵略を受けた中小国が抵抗に成功した初めてに近い例である。\n外交筋によると、ロシアはこれによってコーカサス地域からの撤退、中央アジアの領土の譲渡を余儀なくされ、国内では暴動まで発生しているとのことだ。"
+ TR_Russia_news.11.a:"必ず取り返す"
+ TR_Russia_news.11.b:"神は我々に微笑んだ"
+ TR_Russia_news.11.c:"なんということだ！"
+
+ TR_Russia_news.12.t:"帝国の台頭"
+ TR_Russia_news.12.d:"イランでは古の帝国が蘇ろうとしている。\nロシア側の軍は完全に敗走を続ける中、意外にも破竹の勢いで進軍しているイラン軍は、途中で古のペルシャ帝国への回帰を宣言した。\nモスクワが燃える前に我々に従え。という強い態度で停戦協定に臨んだペルシャは、コーカサスや中央アジアを割譲させ、最終的には先の大戦争でロシア帝国が得た中東の国家までも移管させた。\nアケネメス朝の復古主義に燃えるペルシャ帝国は、既に他地域の攻撃まで行う準備をしており、これに対しイギリス領インドを持つ英国は深い懸念を示している。"
+ TR_Russia_news.12.a:"これが帝国か"
+ TR_Russia_news.12.b:"マケドニアを滅ぼさん"
