GER / 国民精神と無政府主義、神権主義の政党名追加

--- a/localisation/TR_ideas/japanese/TR_GER_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_GER_ideas_l_japanese.yml
@@ -7,3 +7,6 @@
  GER_workers_democracy: "労働者の民主主義"
  GER_workers_democracy2: "労働者の民主主義"
  GER_positive_propaganda: "積極的なプロパガンダ"
+ GER_Dolchstosslegende: "背後の一突き伝説"
+ GER_legacy_of_an_empire: "帝国の遺産"
+ GER_Opposition_to_War: "戦争への反対"
