--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -13,7 +13,7 @@
  fascism: "全体主義"
  fascism_noun: "全体主義"
  fascism_desc: "全体主義政権"
- communism_desc: "社会主義主義政権"
+ communism_desc: "社会主義政権"
  democratic_desc: "民主主義政権"
  conservatism: "保守主義"
  conservatism_noun: "保守主義"
@@ -64,8 +64,10 @@
  conservatism_party: "保守党"
  Lcoalition: "左派連立"
  Rcoalition: "右派連立"
+ GER_anarchism_party: "FAUD"
+ GER_anarchism_party_long: "ドイツ自由労働者組合"
  GER_fascism_party: "NSAP"
- GER_fascism_party_long: "国家社会主義労働者党"
+ GER_fascism_party_long: "国民社会主義労働者党"
  GER_communism_party: "KPD"
  GER_communism_party_long: "ドイツ共産党"
  GER_communism_unite_party: "SED"
@@ -82,6 +84,7 @@
  GER_neutrality_party_civil_war: "軍事政府"
  GER_neutrality_party_kaiserreich: "DNVP"
  GER_neutrality_party_kaiserreich_long: "ドイツ国家人民党"
+ GER_theocracy_party: "キリスト教社会運動"
  POL_fascism_party: "ONR-ファランガ"
  POL_fascism_party_long: "国家急進運動ファランガ"
  POL_natdem_party: "ND"
