イラン戦争のイラン義勇軍(めちゃつよ)

--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -20,3 +20,5 @@
  RUS_remove_census_desc:"我が国の遊牧民は中央アジアに集中している。彼らに対し住居を提供し、定住させることができれば固定した戸籍によってより効率的な徴兵が行われるだろう。"
  RUS_battle_with_PER:"ギーラーン危機"
  RUS_battle_with_PER_desc:"カスピ海において我が国が"正当な"監視活動を行っていたところ、驚くべきことにイランは我々に対し攻撃をした。\n我が国の安全なカスピ海を守るために、南部の脅威を取り除かなければならない。"
+ RUS_remake_russian_constitution:"国家基本法の改定"
+ RUS_remake_russian_constitution_desc:"反動的な時代に制定された基本法のせいで、我々の近代化は大幅に阻害されているのは紛れもない事実だろう。この旧時代的な憲法を改訂し、我が国の現在の状況に相応しいものに改定することは、民衆と政府の利益になる。"
